# mumailer

./: .gitignore  .travis.yml  README.md  requirements_ci.txt  requirements_dev.txt  setup.cfg  setup.py
.circleci/: config.yml
mumailer/: __init__.py  attachment.py  command_line_options.py  connection.py  constants.py  encryption.py  header.py  message.py  profile.py  profile_message.py  profile_smtp.py  recipient.py  yaml_profile.py
mumailer/samples/: main.py  profile_smtp.py  simple_ssl.py  simple_tls.py
samples/: command_line_arguments.py  profile_smtp.py  simple_ssl.py  simple_tls.py
