[metadata]
name = MuMailer
version = attr: mumailer.constants.APP_VERSION
description = Simple mailer agent using SMTP
long_description = file: README.md
long_description_content_type = text/markdown
author = Fabio Castelli
author_email = muflone@muflone.com
url = http://www.muflone.com/mumailer/
license = GPLv3+
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = mumailer
include_package_data = True
install_requires =
    pyyaml==6.0

[options.package_data]
mumailer = samples/*.py

[options.entry_points]
console_scripts =
    mumailer = mumailer.samples.profile_smtp:main
